--- a/app/views/ttt_games/index.html.erb
+++ b/app/views/ttt_games/index.html.erb
@@ -22,7 +22,7 @@
         </div>
       <%# link_to "Continue Game #{ttt_game.id}", edit_ttt_game_path(ttt_game) %>
     </div>
-    <%= link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
+    <%# link_to "Delete", ttt_game_path(ttt_game), method: :delete %>
     <% end %>
   <% end %>
 </div>
