--- a/app/views/ttt_games/new.html.erb
+++ b/app/views/ttt_games/new.html.erb
@@ -2,7 +2,7 @@
   <h2 class="form-header">Play Another User</h2>
   <div class="form-group">
     <%= f.label :player2, "Player 2:" %>
-    <%= f.collection_select(:player2, @users, :id, :username, include_blank: 'Select') %>
+    <%= f.collection_select(:player2, @users, :id, :username, include_blank: 'Select User') %>
   </div>
   <div class="form-group">
     <%= f.hidden_field :opponent, value: 'user' %>
