Adds Game#show view with links to play new game

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,6 +5,8 @@
 
   <div class="game">
     <br>
-    <h3><%= link_to game.name game_path(game) %></h3>
+    <h3><%= link_to game.name, game_path(game) %></h3>
     <br>
   </div>
+
+<% end %>
