--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,10 @@
     </div>
     <div class="go-right">
       <ul class="navbar-nav">
-        <li><%= link_to "Games", ttt_games_path %></li>
+        <li><%= link_to "Games", games_path %></li>
+        <li><%= link_to "Leaderboard", ttt_games_path %></li>
         <% if current_user %>
+          <li><%= link_to "My_Games", ttt_games_path %></li>
           <li>
           <%= link_to current_user.username, edit_user_registration_path, class: "navbar-account" %></li>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
