--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,12 @@
         <li><%= link_to "Leaderboard", ttt_games_path %></li>
         <% if current_user %>
           <li><%= link_to "My_Games", ttt_games_path %></li>
+          <!-- <li>
+          <%# link_to current_user.username, edit_user_registration_path, class: "navbar-account" %>
+          </li> -->
           <li>
-          <%= link_to current_user.username, edit_user_registration_path, class: "navbar-account" %></li>
+          <%= link_to current_user.username, users_account_path(current_user.id), class: "navbar-account" %>
+          </li>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <%# elsif current_admin %>
           <%# current_admin.email %>
