--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <%# link_to current_user.username, edit_user_registration_path, class: "navbar-account" %>
           </li> -->
           <li>
-          <%= link_to current_user.username, users_account_path(current_user.id), class: "navbar-account" %>
+          <%= link_to current_user.username, player_path(current_user.id), class: "navbar-account" %>
           </li>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <%# elsif current_admin %>
