Adds GameStat class method to update game stat, putting this method in TttGame after game.finished

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <div class="go-right">
       <ul class="navbar-nav">
         <li><%= link_to "Games", games_path %></li>
-        <li><%= link_to "Leaderboard", ttt_games_path %></li>
+        <li><%= link_to "Leaderboards", leaderboards_path %></li>
         <% if current_user %>
           <li><%= link_to "My_Games", ttt_games_path %></li>
           <!-- <li>
