--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
   <tr>
     <th><%= stat.game_name %></th>
     <td><%= stat.wins %></td>
-    <td><%= stat.loses %></td>
+    <td><%= stat.losses %></td>
     <td><%= stat.draws %></td>
     <td><%= stat.total %></td>
   </tr>
