--- a/app/views/mttt_games/new.html.erb
+++ b/app/views/mttt_games/new.html.erb
@@ -1,1 +1,30 @@
 <h2>New MtttGame</h2>
+
+<%= form_for @mttt_game do |f| %>
+  <h2 class="form-header">Play Another User</h2>
+  <div class="form-group">
+    <%= f.label :player2, "Player 2:" %>
+    <%= f.collection_select(:player2, @users, :id, :username, include_blank: 'Select User') %>
+  </div>
+  <div class="form-group">
+    <%= f.hidden_field :opponent, value: 'user' %>
+  </div>
+  <div class="form-group">
+    <%# f.label :opponent, "Select Opponent Mode" %>
+    <%# f.select(:opponent, options_for_select([['Friend', 'friend'], ['Ru-bot', 'ai']])) %>
+  </div>
+  <div class="form-action">
+    <%= f.submit "Challenge User!" %>
+  </div>
+<% end %>
+
+<%= form_for @mttt_game do |f| %>
+  <h2 class="form-header">Play a Friend<br><small>(Sitting Next to You)</small></h2>
+  <div class="form-group">
+    <%= f.hidden_field :player2, value: current_user.id %>
+    <%= f.hidden_field :opponent, value: 'friend' %>
+  </div>
+  <div class="form-action">
+    <%= f.submit "Challenge Friend!" %>
+  </div>
+<% end %>
