Removes from MtttMove integers square_i and square_j and Replaces with square:string, serializing as Array

--- a/app/views/mttt_games/edit.html.erb
+++ b/app/views/mttt_games/edit.html.erb
@@ -5,9 +5,9 @@
     <h3><%= @mttt_game.message %></h3>
   </div>
 
-  <% if @mttt_game.is_picking_up %>
+  <% if @mttt_game.picking_up? %>
     <%= render "mttt_pick_up_board" %>
-  <% elsif @mttt_game.is_replacing %>
+  <% elsif @mttt_game.replacing? %>
     <%= render "mttt_replace_board" %>
   <% else %>
     <%= render "mttt_board" %>
