--- a/app/views/mttt_games/show.html.erb
+++ b/app/views/mttt_games/show.html.erb
@@ -1,1 +1,10 @@
 <h2>Show MtttGame</h2>
+
+<div class="ttt-game">
+  <div class="ttt-message">
+    <h3><%= @mttt_game.message %></h3>
+  </div>
+
+  <%= render "mttt_waiting_board" %>
+
+</div>
