--- a/app/views/mttt_games/_mttt_pick_up_board.html.erb
+++ b/app/views/mttt_games/_mttt_pick_up_board.html.erb
@@ -1,4 +1,4 @@
-<%# if @mttt_game.current_player[:pieces] <= 0 %>
+
 
 <table class="ttt-board">
   <% 3.times do |i| %>
@@ -9,7 +9,8 @@
             <% case @mttt_game.board[i][j] %>
               <% when nil %>
               <% when @mttt_game.current_player[:symbol] %>
-                <% if @valid_squares_to_pick_up.include?([i,j]) %>
+                <%# if @valid_squares_to_pick_up.include?([i,j]) %>
+                <% if @mttt_game.valid_squares_to_pick_up(@mttt_game.current_player[:symbol], @mttt_game.board).include?([i,j]) %>
                   <%= link_to @mttt_game.current_player[:symbol], { controller: 'mttt_games', action: 'update', square_i: i, square_j: j }, method: :put %>
                 <% else %>
                   <%= @mttt_game.board[i][j] %>
