--- a/app/views/mttt_games/edit.html.erb
+++ b/app/views/mttt_games/edit.html.erb
@@ -6,8 +6,10 @@
   </div>
 
   <% if @mttt_game.picking_up? %>
+    <%# render partial: "mttt_pick_up_board", locals: { @valid_squares_to_pick_up => @valid_squares_to_pick_up } %>
     <%= render "mttt_pick_up_board" %>
   <% elsif @mttt_game.replacing? %>
+    <%# render partial: "mttt_replace_board", locals: { @valid_squares_to_replace => @valid_squares_to_replace } %>
     <%= render "mttt_replace_board" %>
   <% else %>
     <%= render "mttt_board" %>
