Display all of user's games in order of updated at

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <li><%= link_to "Games", games_path %></li>
         <li><%= link_to "Leaderboards", leaderboards_path %></li>
         <% if current_user %>
-          <li><%= link_to "My_Games", ttt_games_path %></li>
+          <li><%= link_to "My_Games", games_player_path %></li>
           <!-- <li>
           <%# link_to current_user.username, edit_user_registration_path, class: "navbar-account" %>
           </li> -->
