--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,9 +4,8 @@
 <% @games.each do |game| %>
 
   <div class="game">
-    <br>
     <h3><%= link_to game.name, game_path(game) %></h3>
-    <br>
+    <%= link_to "Play #{game.name}", { controller: game.table_name, action: 'new'}, method: :get, class: "btn-new-game" %>
   </div>
 
 <% end %>
