--- a/app/views/games/games.html.erb
+++ b/app/views/games/games.html.erb
@@ -1,8 +1,8 @@
 <h2>Your Games</h2>
 
 <%= form_tag(games_player_path, method: :get) do %>
-  <%= collection_select(:game ,:name, Game.all, :table_name, :name, prompt: 'View Games')%>
-  <%= submit_tag %>
+  <%= collection_select(:game ,:game_name, Game.all, :table_name, :name, prompt: 'View Games')%>
+  <%= submit_tag "View Games"%>
 <% end %>
 
 
