Fixes update user bug. Adds gradient background to game. Adds dropdown user menu

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,7 +36,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <small><i>(we need your current password to confirm your changes)</i><small><br />
+    <%= f.label :current_password %> <small><i>(we need your current password to confirm your changes)</i></small><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
