--- a/app/views/ttt_games/edit.html.erb
+++ b/app/views/ttt_games/edit.html.erb
@@ -1,3 +1,4 @@
+<section class="game-board">
 <div class="ttt-game">
   <div class="ttt-message">
     <h3><%= @ttt_game.message %></h3>
@@ -6,3 +7,4 @@
 </div>
 
 <%= render "players" %>
+</section>
