--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -85,8 +85,8 @@ input {
   height: 4em;
 }
 
-.navbar ul,
-.navbar div {
+.navbar ul {
+  list-style-type: none;
   display: inline-block;
 }
 
@@ -98,20 +98,68 @@ input {
   background-color: blue;
 }
 
-.navbar-nav li {
+.navbar-nav li, .dropbtn {
   display: inline-block;
-  margin-right: 2.5em;
 }
 
-.navbar-nav li a {
+.navbar-nav li a, .dropbtn {
   color: #fff;
-  /*padding: 1.5em;*/
+  padding: .5em 1.5em;
+  text-align: center;
   text-decoration: none;
 }
 
-.navbar-nav li:hover a {
+.navbar-nav li a:hover, .dropdown:hover {
   cursor: pointer;
   color: #FF6B6B;
+}
+
+/* Style The Dropdown Button */
+/*.dropbtn a{
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}*/
+
+.dropdown {
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+    /*visibility: visible;*/
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
 
 /*
@@ -228,7 +276,7 @@ form.new_ttt_game:first-child {
   background-color: rgba(255,255,255,0.95);
 }
 
-
+/*
 #user_avatar::-webkit-file-upload-button {
   visibility: hidden;
 }
@@ -253,6 +301,7 @@ form.new_ttt_game:first-child {
 #user_avatar:active::before {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
+*/
 
 /*
   ========================================
@@ -342,12 +391,13 @@ form.new_ttt_game:first-child {
 }
 
 .ttt-board td {
- border: 4px solid #000;
+ border: 4px solid #fff;
  width: 100px;
  height: 100px;
 }
 
 .ttt-square {
+  color: #fff;
   font-size: 4em;
   text-align: center;
   margin: -10px -10px 0 0;
@@ -440,6 +490,27 @@ a.btn-new-game {
   background-color: rgba(255,255,255,0.8);
   border: 6px solid #F02626;
 }
+
+/*
+  ========================================
+  Game Board
+  ========================================
+*/
+
+.game-board {
+  /*
+  background: red; /* For browsers that do not support gradients */
+  /*background: -webkit-linear-gradient(70deg, red 60%, blue); /* For Safari 5.1 to 6.0 */
+  /*background: -o-linear-gradient(70deg, red 60%, blue); /* For Opera 11.1 to 12.0 */
+  /*background: -moz-linear-gradient(70deg, red 60%, blue); /* For Firefox 3.6 to 15 */
+
+  margin-top: -22px;
+  background: linear-gradient(90deg, red 55%, blue); /* Standard syntax */
+  /*background: linear-gradient(90deg, red, blue 45%); /* Standard syntax */
+  
+}
+
+
 
 /*
   ========================================
