--- a/app/views/games/games.html.erb
+++ b/app/views/games/games.html.erb
@@ -1,4 +1,4 @@
-<h2>Your Games</h2>
+<h2>My Games</h2>
 
 <%= form_tag(games_player_path, method: :get) do %>
   <%= collection_select(:game ,:game_name, Game.all, :table_name, :name, prompt: 'View Games')%>
