--- a/app/views/mttt_games/edit.html.erb
+++ b/app/views/mttt_games/edit.html.erb
@@ -1,3 +1,5 @@
+<section class="game-board">
+
 <h2>Edit MtttGame</h2>
 
 <div class="ttt-game">
@@ -32,5 +34,7 @@
   </div>
 
 </div>
+
+</section>
 
 <%# render "players" %>
