--- a/app/views/ttt_games/edit.html.erb
+++ b/app/views/ttt_games/edit.html.erb
@@ -1,4 +1,6 @@
-<section class="game-board">
+
+
+<section class="game-view" id=<%= "#{@ttt_game.which_player_view}" %>>
 <div class="ttt-game">
   <div class="ttt-message">
     <h3><%= @ttt_game.message %></h3>
