Correctly styles animations based on game states and opponents

--- a/app/views/ttt_games/edit.html.erb
+++ b/app/views/ttt_games/edit.html.erb
@@ -1,6 +1,6 @@
 
 
-<section class="game-view" id=<%= "#{@ttt_game.which_player_view}" %>>
+<section class="game-view" id=<%= "#{@ttt_game.which_player_edit_view}" %>>
 <div class="ttt-game">
   <div class="ttt-message">
     <h3><%= @ttt_game.message %></h3>
