--- a/app/views/ttt_games/show.html.erb
+++ b/app/views/ttt_games/show.html.erb
@@ -1,4 +1,5 @@
-<% unless @ttt_game.finished? %>
+<%# unless @ttt_game.finished? %>
+<% if false %>
   <script type="text/javascript">
           setTimeout(function(){
             window.location.reload(1);
@@ -6,8 +7,7 @@
         </script>
 <% end %>
 
-
-
+<section class="game-view" id=<%= @ttt_game.which_player_show_view %>>
 <div class="ttt-game">
   <div class="ttt-message">
     <h3><%= @ttt_game.message %></h3>
@@ -21,6 +21,8 @@
 </div>
 
 <%= render "players" %>
+
+</section>
 
 
 
