--- a/app/views/mttt_games/show.html.erb
+++ b/app/views/mttt_games/show.html.erb
@@ -1,3 +1,5 @@
+<section class="game-view" id=<%= @mttt_game.which_player_show_view %>>
+
 <h2>Show MtttGame</h2>
 
 <div class="ttt-game">
@@ -8,3 +10,5 @@
   <%= render "mttt_waiting_board" %>
 
 </div>
+
+</section>
