--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
 <header>
   <nav class="navbar group">
+    <div class="wrapper">
     <div class="go-left">
       <div class="navbar-header">
         <span class="ruby">RubyGames</span>
@@ -50,12 +51,13 @@
       </ul>
     </div>
 
-   
+   </div>
   </nav>
 </header>
 
-
+<div class="wrapper">
 <%= yield %>
+</div>
 
 </body>
 </html>
